--- a/main.html
+++ b/main.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+	<p id="para">Enter the Metaverse</p>
+	<button id="btn">Enter</button>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
