--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
 <html>
 
 <head>
-	<p id="para">Enter the Metaverse</p>
-	<button id="btn">Enter</button>
+	<p id="status">Enter the Metaverse</p>
+	<button id="enterBtn">Enter</button>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
